--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <!-- Cards Section -->
         <section class="cards">
-            <div>
+            <div class="first">
                 <h3>Discover the best stores near you</h3>
                 <a href="#">NORWAY <i class="fas fa-chevron-down"></i></a>
             </div>
@@ -55,7 +55,7 @@
                 <p>Do you know what could beat the exciting feeling of having a new computer?Make your own PC!</p>
             </div>
 
-            <div>
+            <div class="first">
                 <h3>+5K tools for you to choose from</h3>
                 <a href="#">Learn more</a>
             </div>
