Link Javascript file and added Hamburger mobile device

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
+                <i class="fas fa-times"></i>
             </div>
         </header>
 
@@ -63,6 +64,7 @@
         </section>
 
     </div>
-    
+
+    <script src="main.js"></script>
 </body>
 </html>
